# TransROM-IA

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_PT.md  init_db.py  linting.ruff  main.py  package-lock.json  package.json  pyproject.toml  transrom_legacy.sql  transrom_legacy_full_export.json  transrom_legacy_full_export_validated.json  transrom_populate.sql
backend/: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 343ae8349f23_fix_translation_job.py  5380b828f70c_fix_translation_job_timestamps.py  6fb9c719fe4d_create_initial_migration.py  89974dd0be48_create_users_table.py  97dec4f59146_fix_translation_job_created_at.py  c1c6ab94d87d_add_password_field.py
backend/api/: README.md
backend/apis_app/: main.py
backend/apis_app/api/v1/: api.py
backend/apis_app/api/v1/endpoints/: auth.py  (+2 more)
backend/apis_app/core/: config.py  exceptions.py
backend/apis_app/database/: session.py
backend/apis_app/models/: __init__.py  base.py  translation.py  user.py
backend/apis_app/schemas/: auth.py  base.py  user.py
backend/apis_app/services/: auth.py  base.py  user.py
backend/app/: main.py
backend/app/api/: auth.py  base.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  logging.py
backend/app/database/: database.py  session.py
backend/app/models/: __init__.py  base.py  translation.py  user.py
backend/app/schemas/: auth.py  translation.py  user.py
backend/app/services/: auth.py  base.py  user.py
backend/console_manipulation/consoles/gba/: gba_rom.py
backend/console_manipulation/core/: compression.py  graphics.py  pointer.py  rom.py  tables.py  text.py  utils.py
backend/console_manipulation/docs/: GBA.md  GBA_PT.md  README.md  README_PT.md  character_tables.md  character_tables_PT.md  compression.md  compression_PT.md  file_structure_headers.md  file_structure_headers_PT.md  graphics_basics.md  graphics_basics_PT.md  hexadecimal.md  hexadecimal_PT.md  magic_numbers.md  magic_numbers_PT.md  pointers.md  pointers_PT.md  reverse_engineering_workflow.md  reverse_engineering_workflow_PT.md  save_data.md  save_data_PT.md
backend/file_manipulation/: README.md
backend/file_manipulation/cli/: main.py
backend/file_manipulation/config/: logging_config.py
backend/file_manipulation/core/: base_config.py  base_filter.py  base_processor.py  orchestrator.py  pipeline.py
backend/file_manipulation/datatypes/: text_candidate.py
backend/file_manipulation/modules/: __init__.py  chunkifier.py  context_stitcher.py  dictionary_word_filter.py  entropy_filter.py  letter_ratio_filter.py  linear_sequence_filter.py  low_char_diversity_filter.py  nlp_postprocessor.py  output_formatter.py  printable_density_filter.py  repeated_block_filter.py  stutter_penalty_filter.py  word_structure_filter.py
backend/file_manipulation/modules/filters/: compression_ratio_filter.py  entropy_filter.py  printable_ratio_filter.py
backend/file_manipulation/output/: minish_cap_high_no_NLP.txt
backend/file_manipulation/utils/: decorators.py  entropy.py  text_analyzer.py
backend/scripts/: init_db.py
backend/tests/: conftest.py
(+135 files in other folders)
